--- a/projetoesw3rd/projetoesw3rd.csproj
+++ b/projetoesw3rd/projetoesw3rd.csproj
@@ -279,6 +279,10 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\baner.png" />
+    <Content Include="images\img1.svg" />
+    <Content Include="images\img2.svg" />
+    <Content Include="images\img3.svg" />
     <Content Include="Models\projetoESWModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>projetoESWModel.edmx</DependentUpon>
@@ -301,6 +305,7 @@
     <Content Include="Models\projetoESWModel.edmx.diagram">
       <DependentUpon>projetoESWModel.edmx</DependentUpon>
     </Content>
+    <Content Include="images\desktop.ini" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
